afegeix numerodefuncionari a l'operació de registrar nou funcionari #87 #44
